--- a/index.html
+++ b/index.html
@@ -4,22 +4,27 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Éval'École</title>
+    <!-- On garde Tailwind en CDN pour simplifier la configuration CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
   <script type="importmap">
 {
   "imports": {
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "react": "https://aistudiocdn.com/react@^19.2.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
+    "react/": "https://aistudiocdn.com/react@^19.2.0/",
+    "react-router-dom": "https://aistudiocdn.com/react-router-dom@^7.9.6",
     "lucide-react": "https://aistudiocdn.com/lucide-react@^0.554.0",
     "date-fns": "https://aistudiocdn.com/date-fns@^4.1.0",
     "recharts": "https://aistudiocdn.com/recharts@^3.4.1",
-    "react-router-dom": "https://aistudiocdn.com/react-router-dom@^7.9.6"
+    "vite": "https://aistudiocdn.com/vite@^7.2.2",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1"
   }
 }
 </script>
 </head>
   <body class="bg-gray-50 text-slate-900 antialiased">
     <div id="root"></div>
+    <!-- Cette ligne est cruciale : elle dit au navigateur de lancer votre app React -->
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
